--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
     <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <meta charset="UTF-8" />       
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>mouse input test</title>
+        <title>agario4.0</title>
 
         <link rel="stylesheet" type="text/css" href="./styles.css" />
     </head>
@@ -12,7 +11,33 @@
 
     <body>
         <div class="wrapper">
-            <canvas id="canvas"></canvas>
+            <div id="game">
+                <h6 id="stroke_state" class="stroke_state">загрузка карты...</h6>
+                <h6 id="stroke_state2" class="stroke_state">загрузка карты...</h6>
+                <canvas id="canvas"></canvas>
+            </div>
+
+            <div id="form">                
+                <h2 class="settings">настройки</h2>
+                <p>задний фон</p>
+                <select id="select">
+                    <option>Пункт 1</option>
+                    <option>Пункт 2</option>
+                    <option>Пункт 3</option>
+                    <option>Пункт 4</option>
+                    <option>Пункт 5</option>
+                  </select>  
+                <p>количество точек</p>
+                <input id="dots" type="number" placeholder="количество точек"/>
+                <p>размер карты</p>
+                <input id="mapSize" type="number" placeholder="размер карты"/>
+                <p>начальная скорость</p>
+                <input id="velocity" type="number" placeholder="скорость"/>    
+         
+                <p>FPS</p>
+                <input id="FPS" type="number" placeholder="FPS"/>
+				<button id="start_game">ok</button>
+            </div>
         </div>
     </body>
 
