run navigate text panel

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,7 @@
     <body>
         <div class="wrapper">
             <div id="game">
-                <h6 id="stroke_state" class="stroke_state">загрузка карты...</h6>
-                <h6 id="stroke_state2" class="stroke_state">загрузка карты...</h6>
+                <h6 id="NavigateText" class="navigate-text">загрузка карты...</h6>               
                 <canvas id="canvas"></canvas>
             </div>
 
