add menu and gui

--- a/public/index.html
+++ b/public/index.html
@@ -16,15 +16,15 @@
                 <canvas id="canvas"></canvas>
             </div>
 
-            <div id="form">                
+            <div class="container" id="form">                
                 <h2 class="settings">настройки</h2>
                 <p>задний фон</p>
                 <select id="select">
-                    <option>Пункт 1</option>
-                    <option>Пункт 2</option>
-                    <option>Пункт 3</option>
-                    <option>Пункт 4</option>
-                    <option>Пункт 5</option>
+                    <option selected value="Default_Deep_forest_photo_realism_green_trees_1.jpg">светлый лес</option>
+                    <option value="Default_Deep_forest_photo_realism_green_trees_3.jpg">темный лес</option>
+                    <option value="Leonardo_Diffusion_XL_factory_cyberpunk_city_photo_realism_1.jpg">стена завода</option>
+                    <option value="Leonardo_Diffusion_XL_factory_cyberpunk_city_photo_realism_2.jpg">паровая фабрика</option>
+                    <option value="RPG_40_microcosm_nano_robots_cyberpunk_2.jpg">труба в небе</option>
                   </select>  
                 <p>количество точек</p>
                 <input id="dots" type="number" placeholder="количество точек"/>
@@ -35,7 +35,15 @@
          
                 <p>FPS</p>
                 <input id="FPS" type="number" placeholder="FPS"/>
-				<button id="start_game">ok</button>
+				<button class="button" id="response">ok</button>
+            </div>
+            <div class="container" id="loader">                
+                <h2 class="loader">загрузка...</h2>
+            </div>
+            <div class="container" id="player-name">                
+                <p>имя игрока</p>
+                <input id="input-player-name" placeholder="имя игрока"/>
+                <button class="button" id="start-button">ok</button>
             </div>
         </div>
     </body>
